--- a/petshop/templates/editpet.html
+++ b/petshop/templates/editpet.html
@@ -24,7 +24,12 @@
 
   <div class="mb-3">
     <div class="form-check">
-      {# TODO  Add sold checkbox here #}
+       {# TODO  Add sold checkbox here #}
+       {% if sold %}
+          <input type="checkbox" name="sold" checked>
+        {% else %}
+          <input type="checkbox" name="sold">
+        {% endif %}
       <label class="form-check-label" for="sold" > Sold </label>
     </div>
   </div>
